[project]
name = "comfyui-differential_diffusion-workflows"
description = "ComfyUI 已经直接支持了 Differential Diffusion，所以这个库现在用于存放我设计的 Differential Diffusion 工作流"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/ZHO-ZHO-ZHO/ComfyUI-Differential_Diffusion-Workflows"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Differential_Diffusion-Workflows"
Icon = ""
